[gd_scene load_steps=9 format=2]

[ext_resource path="res://ship.png" type="Texture" id=1]
[ext_resource path="res://Ship.gd" type="Script" id=2]
[ext_resource path="res://Missile.tscn" type="PackedScene" id=3]
[ext_resource path="res://HealthDisplay.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 124, 24 )

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.578125, 0.930786, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 7.21
flag_align_y = true
flag_disable_z = true
spread = 9.68
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_random = 1.0
color_ramp = SubResource( 3 )

[node name="Ship" type="KinematicBody2D"]
script = ExtResource( 2 )
Missile = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.369614, 7.9709 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="FrontLauncher" type="Position2D" parent="."]
position = Vector2( 137.761, 0.31066 )

[node name="StarboardLauncher1" type="Position2D" parent="."]
position = Vector2( 23.244, 35.052 )
rotation = 1.5708

[node name="StarboardLauncher2" type="Position2D" parent="."]
position = Vector2( -2.8245, 37.2995 )
rotation = 1.5708

[node name="StarboardLauncher3" type="Position2D" parent="."]
position = Vector2( -30.1048, 35.2393 )
rotation = 1.5708

[node name="PortLauncher1" type="Position2D" parent="."]
position = Vector2( -29.158, -35.0436 )
rotation = -1.5708

[node name="PortLauncher2" type="Position2D" parent="."]
position = Vector2( -3.10359, -40.3527 )
rotation = -1.5708

[node name="PortLauncher3" type="Position2D" parent="."]
position = Vector2( 23.1516, -35.2392 )
rotation = -1.5708

[node name="HealthDisplay" parent="." instance=ExtResource( 4 )]

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -127.786, 0.793701 )
rotation = 3.14159
amount = 1000
lifetime = 4.0
local_coords = false
process_material = SubResource( 4 )
